-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 15.0.0-rc1
-
None
-
7f5c4728c (15.0)
Qt Creator can crash, while enabling a softloadable plugin with disabled, non-softloadable dependencies.
Example:
- Launch Qt Creator with disabled Axivion and Debugger plugins
- In the Plugin dialog, enable Axivion and press OK
Backtrace
#0 0x00007fffcc23a768 in Axivion::Internal::AxivionPerspective::initPerspective (this=0x5555576a5290) at /home/alportal/dev/qt-creator/src/plugins/axivion/axivionperspective.cpp:978 pal = {d = 0x5555578196e0, currentGroup = QPalette::Active} text = {d = {d = 0x55555776fc50, ptr = 0x55555776fc60 u"Search for issues inside the Axivion dashboard or request issue details for Axivion inline annotations to see them here.", size = 120}, static _empty = 0 u'\000'} reloadDataAct = 0x55555781efe0 showIssuesAct = 0x555557821e80 toggleIssuesAct = 0x55555781e350 menu = 0x0 action = 0x55555782bf80 #1 0x00007fffcc23c192 in Axivion::Internal::setupAxivionPerspective () at /home/alportal/dev/qt-creator/src/plugins/axivion/axivionperspective.cpp:1098 No locals. #2 0x00007fffcc2aa4ce in Axivion::Internal::AxivionPlugin::initialize (this=0x5555577705d0) at /home/alportal/dev/qt-creator/src/plugins/axivion/axivionplugin.cpp:1057 No locals. #3 0x00007ffff7ef4cd3 in ExtensionSystem::IPlugin::initialize (this=0x5555577705d0, arguments=..., errorString=0x7fffffffaf70) at /home/alportal/dev/qt-creator/src/libs/extensionsystem/iplugin.cpp:179 No locals. #4 0x00007ffff7f5df5b in ExtensionSystem::CppPluginSpec::initializePlugin (this=0x555555cb40b0) at /home/alportal/dev/qt-creator/src/libs/extensionsystem/pluginspec.cpp:1293 err = {d = {d = 0x0, ptr = 0x0, size = 0}, static _empty = 0 u'\000'} #5 0x00007ffff7f1a90d in ExtensionSystem::Internal::PluginManagerPrivate::loadPlugin (this=0x555555c61d80, spec=0x555555cb40b0, destState=ExtensionSystem::PluginSpec::Initialized) at /home/alportal/dev/qt-creator/src/libs/extensionsystem/pluginmanager.cpp:1794 nanotraceScopedTracerObject = {m_start = {__d = {__r = 1731497310911279943}}, m_name = {_M_dataplus = {<std::allocator<char>> = {<std::__new_allocator<char>> = {<No data fields>}, <No data fields>}, _M_p = 0x5555576cb6e0 "Axivion::initialize"}, _M_string_length = 19, {_M_local_buf = "\023\000\000\000\000\000\000\000:load\000\000", _M_allocated_capacity = 19}}, m_cat = {_M_dataplus = {<std::allocator<char>> = {<std::__new_allocator<char>> = {<No data fields>}, <No data fields>}, _M_p = 0x7fffffffb198 "Axivion"}, _M_string_length = 7, {_M_local_buf = "Axivion\000\300\261\377\377\377\177\000", _M_allocated_capacity = 31084746187044929}}, m_args = {<std::_Vector_base<Nanotrace::Arg, std::allocator<Nanotrace::Arg> >> = {_M_impl = {<std::allocator<Nanotrace::Arg>> = {<std::__new_allocator<Nanotrace::Arg>> = {<No data fields>}, <No data fields>}, <std::_Vector_base<Nanotrace::Arg, std::allocator<Nanotrace::Arg> >::_Vector_impl_data> = {_M_start = 0x0, _M_finish = 0x0, _M_end_of_storage = 0x0}, <No data fields>}}, <No data fields>}} lockFile = {_M_t = {<std::__uniq_ptr_impl<ExtensionSystem::LockFile, std::default_delete<ExtensionSystem::LockFile> >> = {_M_t = {<std::_Tuple_impl<0, ExtensionSystem::LockFile*, std::default_delete<ExtensionSystem::LockFile> >> = {<std::_Tuple_impl<1, std::default_delete<ExtensionSystem::LockFile> >> = {<std::_Head_base<1, std::default_delete<ExtensionSystem::LockFile>, true>> = {_M_head_impl = {<No data fields>}}, <No data fields>}, <std::_Head_base<0, ExtensionSystem::LockFile*, false>> = {_M_head_impl = 0x5555576c9bb0}, <No data fields>}, <No data fields>}}, <No data fields>}} specName = {_M_dataplus = {<std::allocator<char>> = {<std::__new_allocator<char>> = {<No data fields>}, <No data fields>}, _M_p = 0x7fffffffb130 "Axivion"}, _M_string_length = 7, {_M_local_buf = "Axivion\000\244m\363\367\377\177\000", _M_allocated_capacity = 31084746187044929}} #6 0x00007ffff7f18389 in ExtensionSystem::Internal::PluginManagerPrivate::loadPluginsAtRuntime (this=0x555555c61d80, plugins=...) at /home/alportal/dev/qt-creator/src/libs/extensionsystem/pluginmanager.cpp:1484 spec = 0x555555cb40b0 __for_range = @0x7fffffffb290: {<QListSpecialMethods<ExtensionSystem::PluginSpec*>> = {<QListSpecialMethodsBase<ExtensionSystem::PluginSpec*>> = {<No data fields>}, <No data fields>}, d = {d = 0x555557798f10, ptr = 0x555557798f20, size = 1}} __for_begin = {i = 0x555557798f20} __for_end = {i = 0x555557798f28} allSoftloadable = true __PRETTY_FUNCTION__ = "void ExtensionSystem::Internal::PluginManagerPrivate::loadPluginsAtRuntime(const QSet<ExtensionSystem::PluginSpec*>&)" queue = {<QListSpecialMethods<ExtensionSystem::PluginSpec*>> = {<QListSpecialMethodsBase<ExtensionSystem::PluginSpec*>> = {<No data fields>}, <No data fields>}, d = {d = 0x555557798f10, ptr = 0x555557798f20, size = 1}} localDelayedInitializeQueue = {c = {<std::_Deque_base<ExtensionSystem::PluginSpec*, std::allocator<ExtensionSystem::PluginSpec*> >> = {_M_impl = {<std::allocator<ExtensionSystem::PluginSpec*>> = {<std::__new_allocator<ExtensionSystem::PluginSpec*>> = {<No data fields>}, <No data fields>}, <std::_Deque_base<ExtensionSystem::PluginSpec*, std::allocator<ExtensionSystem::PluginSpec*> >::_Deque_impl_data> = {_M_map = 0x7fffe4006c50, _M_map_size = 8, _M_start = {_M_cur = 0x555556d1e6e0, _M_first = 0x555556d1e6e0, _M_last = 0x555556d1e8e0, _M_node = 0x7fffe4006c68}, _M_finish = {_M_cur = 0x555556d1e6e0, _M_first = 0x555556d1e6e0, _M_last = 0x555556d1e8e0, _M_node = 0x7fffe4006c68}}, <No data fields>}}, <No data fields>}} #7 0x00007ffff7f0f412 in ExtensionSystem::PluginManager::loadPluginsAtRuntime (plugins=...) at /home/alportal/dev/qt-creator/src/libs/extensionsystem/pluginmanager.cpp:352 No locals. #8 0x00007fffe980b2e9 in Core::Internal::PluginDialog::closeDialog (this=0x7fffffffc3f0) at /home/alportal/dev/qt-creator/src/plugins/coreplugin/plugindialog.cpp:110 No locals.
- blocks
-
QTCREATORBUG-31123 Extensions mode: SoftLoadable plugins are only loaded after restart
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-32001 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
603927,2 | ExtensionSystem: Add PluginSpec::isEffectivelySoftloadable | 15.0 | qt-creator/qt-creator | Status: MERGED | +2 | -1 |