ExtensionSystem: Add PluginSpec::isEffectivelySoftloadable

Use it to determine if a Plugin and its dependencies can be
soft-loaded.

Fixes: QTCREATORBUG-32001
Change-Id: Iba6fd0485d3eadc30e3830dd182600cf145fe432
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>